tweaked css to fix alignment

--- a/src/Button.css
+++ b/src/Button.css
@@ -11,7 +11,7 @@ button {
 }
 
 .btn-style-wide {
-  width: 110px;
+  width: 105px;
   height: 50px;
   margin-left: 25px;
   border-radius: 4px;
